--- a/index (1).html
+++ b/index (1).html
@@ -23,7 +23,7 @@
     </nav>
     <header>
       <div class="center">
-        <img src="./20240217_183918_0000.png"></img>
+        <img src="./20240217_183918_0000."></img>
       </div>
       <h1>kawã</h1>
       <h2>técnico de informática</h2>
